Primer version con el carousel

--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -2,7 +2,7 @@
     footer {
         background: $bgOne;
         text-align: center;
-        border: $borde;
+        //border: $borde;
         border-bottom: 5px solid $colorPrimary;
 
         #p1 {
